Bug 100462 - Locale en-GB-oxendict (previously en-GB-oed) is missing or broken -> corresponding spell-checker does not work.
Summary: Locale en-GB-oxendict (previously en-GB-oed) is missing or broken -> correspo...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Extensions (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-17 19:55 UTC by benjamin.titze
Modified: 2020-12-03 09:53 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description benjamin.titze 2016-06-17 19:55:50 UTC
I tried to install an en-GB-oxendict spell-checker. I packaged it into an oxt archive and specified "en-GB-oxendict" as locale. I also tried "en-GB-oed". It doesn't work. The spell-checker is not recognized.

But the entry "English, OED spelling (UK)" does appear by default in the LibreOffice language options, so at some point this locale was supported.

I think a new file may be needed here:
https://cgit.freedesktop.org/libreoffice/core/tree/i18npool/source/localedata/data

en_GB-oxendict.xml

and probably some changes in the source code...
Comment 1 Xisco Faulí 2017-03-08 11:49:48 UTC Comment hidden (obsolete)
Comment 2 mrwlists 2017-03-09 19:22:42 UTC
@Xisco Fauli

I am not the reporter, but I see no change in behaviour with the latest LO version 5.3.0.3. So this bug still exists. And I confirm it. 

I suspect that what may be required is an en-gb-oed locale definition, or some such, to support the use of the dictionary. I don't think one has ever been included in either OO or LO. This bug applies to earlier LO releases - certainly back to 4.4.

I think that the reason that the entry "English, OED spelling (UK)" appears in the LibreOffice language options is due to the introduction of support for "language variants" at some time in the past. But it would seem that this is not sufficient to make the dictionary operable.
Comment 3 Xisco Faulí 2017-03-09 20:49:12 UTC
Ok, then let's move it to NEW since you confirmed it. Thanks
Comment 4 mrwlists 2017-03-10 15:54:04 UTC
I have requested that locale data be added on the (unverified) assumption that this will solve the problem. See Bug 106480.
Comment 5 Eike Rathke (retired, only occasionally showing up) 2017-03-13 15:54:19 UTC
(In reply to benjamin.titze from comment #0)
> I tried to install an en-GB-oxendict spell-checker. I packaged it into an
> oxt archive and specified "en-GB-oxendict" as locale. I also tried
> "en-GB-oed". It doesn't work. The spell-checker is not recognized.

What exactly does it try to register in the dictionaries.xcu Locales node?

> I think a new file may be needed here:
> https://cgit.freedesktop.org/libreoffice/core/tree/i18npool/source/
> localedata/data

Unrelated to spell-checking.

Could you attach the .oxt archive file to this bug?
Comment 6 Eike Rathke (retired, only occasionally showing up) 2017-03-13 16:03:31 UTC
Or only the contained dictionaries.xcu would be sufficient.
Comment 7 Eike Rathke (retired, only occasionally showing up) 2017-03-13 17:32:46 UTC
I just tried using LibreOffice 5.3.1 and gave an extension dictionary a dictionaries.xcu with <value>en-GB-oed</value> for the Locales property and installed that, it was recognized fine and "English, OED spelling (UK)" was marked as spell-checker available.

Giving <value>en-GB-oxendict</value> instead, an additional entry "en-GB-oxendict" is added to the available Hunspell SpellChecker under Tools-Options-LanguageSettings-WritingAids. To use, changing the language for text one has to enter en-GB-oxendict once in the language combobox edit field, from then on it is available.

We'll probably need a mechanism that dictionary provided language tags are automatically added to that list. Though in this case both, en-GB-oxendict and en-GB-oed, are internally known and maybe could be treated as aliases for UI purposes.
Comment 8 mrwlists 2017-03-13 17:42:09 UTC
(In reply to Eike Rathke from comment #7)
> We'll probably need a mechanism that dictionary provided language tags are
> automatically added to that list. Though in this case both, en-GB-oxendict
> and en-GB-oed, are internally known and maybe could be treated as aliases
> for UI purposes.

I would have said 'definitely' in place of 'maybe':

https://www.iana.org/assignments/lang-subtags-templates/oxendict.txt
https://www.iana.org/assignments/lang-subtags-templates/en-GB-oed.txt
Comment 9 Eike Rathke (retired, only occasionally showing up) 2017-03-13 21:24:08 UTC
'maybe' in terms of program logic.
Comment 10 Eike Rathke (retired, only occasionally showing up) 2017-03-13 22:55:32 UTC
Taking.
Comment 11 Commit Notification 2017-03-14 11:51:08 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bf63e5a3a6ae458ffe10061c1bcf969a534760c5

tdf#100462 inject language tags provided by spell-checkers to language list

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2017-03-14 14:14:47 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b614ceb80c6648ccae4a0f431eec139aea6a6554

tdf#100462 prefer en-GB-oxendict over en-GB-oed

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Ramoji. R 2020-12-03 09:49:02 UTC Comment hidden (obsolete)