tdf#100462 inject language tags provided by spell-checkers to language list

... so they are available already at the first instanciation without having to
be added manually, depending on which listing is requested.

Change-Id: Idcb8f7fcbc82c757a2b06b8f04b81e88197a0a5b